--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     --text-convert: #3D3D3D; /* Charcoal */
 }
 
+[data-theme] {
+  transition: all 0.3s ease-in-out;
+}
+
 [data-theme="dark"] {
     --secondary-color: #1F2937; /* Midnight Express */
     --secondary-box-color: #273549; /* Tarawera */
@@ -105,6 +109,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 10px 0;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 .input-box h1 {
@@ -160,6 +165,7 @@ body{
     padding: 30px 0;
     flex: 1;
     overflow-y: auto;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .conversion{
@@ -169,6 +175,7 @@ body{
     height: 90px;
     padding: 20px 0;
     border-top-left-radius: 5px;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .conversion:nth-child(3){
@@ -178,8 +185,10 @@ body{
 .conversion .convert-head {
     color: var(--text-color);
     margin-bottom: 10px;
+    transition: color 0.3s ease-in-out;
 }
 
 .conversion p {
     color: var(--text-small-color);
+    transition: color 0.3s ease-in-out;
 }
