--- a/style.css
+++ b/style.css
@@ -198,3 +198,21 @@ main{
     color: var(--text-small-color);
     transition: color 0.3s ease-in-out;
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .conversion {
+        width: 70%;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    .conversion {
+        width: 70%;
+    }
+}
+
+@media (max-width: 575px) {
+    .conversion {
+        width: 90%;
+    }
+}
